# llm-management

./: .env-example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  mirror.yml
conf/: exoscale.toml
script/: build  lint  server  test
src/llm_management/: __init__.py  __main__.py  cache.py  models.py  server.py  settings.py
src/llm_management/agents/: capital_city.py  foi_structure.py  immigration_detection.py
tests/: test_auth.py  test_foi_structure_extract.py  test_llm_management.py  test_meta.py  test_proxy.py  test_toast.py
